# tpm

./: .env.example  .gitignore  README.md  pyproject.toml
authoring/briefs/: internal_rollout_smoke.json  northstar_launch_week.json
authoring/fixtures/internal_rollout_smoke/: coverage_contract.json  coverage_semantics.json  npc_coverage.json  scenario.json
authoring/fixtures/northstar_launch_week/: coverage_contract.json  coverage_semantics.json  npc_coverage.json  scenario.json
docs/: architecture.md  grading.md  review_session_dashboard.html
docs/specs/: ACT_TAXONOMY_v1.md  CONTEXT_FAMILY_SCHEMA_v1.json  EVAL_DSL_v1.md  PREDICATE_DSL_v1.md  TPM_BUNDLE_PERFORMANCE_SUMMARY_v2.md  TPM_COMPETENCY_MODEL_v1.md  TPM_JUDGE_IO_v1.md  TPM_PERFORMANCE_SUMMARY_v3.md
examples/: busywork_run.tpm  false_green.tpm  golden.tpm  spray_and_pray.tpm  strong_run.tpm
examples/internal_rollout_smoke/: smoke.tpm
scripts/: build_review_dashboard.py
tests/: test_agent_and_authoring.py  test_calibration_hygiene.py  test_simulation.py
tpm_sim/: __init__.py  __main__.py  briefing.py  cli.py  common.py  coverage_artifacts.py  engine.py  environment.py  evaluator.py  judge.py  model_client.py  performance.py  predicate.py  runtime_env.py  scenario.py  script_dsl.py  specs.py  storage.py
tpm_sim/agent/: __init__.py  base.py  openai_adapter.py  prompts.py  runner.py
tpm_sim/authoring/: __init__.py  briefs.py  prompts.py  workflow.py
tpm_sim/scenarios/: __init__.py
tpm_sim/scenarios/internal_rollout_smoke/: closure_report.json  coverage_contract.json  coverage_semantics.json  (+5 more)
(+12 files in other folders)
